namespace OnlineClothingStore.Creational.AbstractFactory;

public interface IBox
{
    string GetBoxDescription();
}