namespace OnlineClothingStore.Creational.AbstractFactory;

public interface IInsert
{
    string GetInsertDescription();
}