namespace OnlineClothingStore.Creational.AbstractFactory;

public interface ILabel
{
    string GetLabelDescription();
}